# fastapi_quizbot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  debug.py  main.py  pyproject.toml  pytest.ini  quiz_sample.sql  requirements.txt
src/: main.py
src/configuration/: config.py  database.py
src/core/: telegram.py
src/db/: entity.py
src/domain/: enums.py  router.py
src/domain/bot/: bot_controller.py  enums.py  model.py
src/domain/default/: __init__.py  default_controller.py
src/domain/quiz/: model.py  quiz_controller.py  quiz_service.py
src/domain/user/: model.py  user_controller.py  user_service.py
test/: conftest.py  test_main.py  test_quiz.py  test_user.py  test_webhook.py
