[project]
name = "fastapi-quizbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.1",
    "pymysql>=1.1.1",
    "sqlalchemy>=2.0.40",
]
