[project]
name = "fastapi-quizbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=44.0.2",
    "devtools>=0.12.2",
    "fastapi[standard]>=0.115.12",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.1",
    "pymysql>=1.1.1",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "sqlalchemy>=2.0.40",
]
